updated metrics calc

--- a/metrics_gpt.ipynb
+++ b/metrics_gpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,6 +32,9 @@
     "import json\n",
     "import re\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity as sklearn_cosine_similarity\n",
+    "from sklearn.metrics import pairwise\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import PorterStemmer\n",
@@ -49,40 +52,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalize_text(text: str) -> str:\n",
+    "# Define text normalization function\n",
+    "def normalize_text(text: str) -> list:\n",
     "    \"\"\"Normalize the input text.\"\"\"\n",
     "    words = word_tokenize(text)\n",
     "    words = [re.sub('[^a-zA-Z]', '', word).lower() for word in words]\n",
-    "    words = [word for word in words if len(word)]\n",
-    "    stop_words = set(stopwords.words('english'))\n",
-    "    words = [word for word in words if word not in stop_words]\n",
+    "    words = [word for word in words if word and word not in stopwords.words('english')]\n",
     "    stemmer = PorterStemmer()\n",
     "    words = [stemmer.stem(word) for word in words]\n",
-    "    return \" \".join(words)  # Ensure it returns a string"
+    "    \n",
+    "    if not words:\n",
+    "        return [\"default\", \"content\"]  # Default text to avoid empty vocabulary issues\n",
+    "    \n",
+    "    return words\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Truncate text to a specified token limit\n",
-    "def truncate_text(text: str, token_limit: int = 512) -> str:\n",
-    "    \"\"\"Truncate text to a specified number of tokens.\"\"\"\n",
-    "    if isinstance(text, str):\n",
-    "        words = text.split()\n",
-    "        return \" \".join(words[:token_limit])\n",
-    "    return \"\""
+    "# Define cosine similarity function for text documents\n",
+    "def cosine_similarity_text(document1: str, document2: str) -> float:\n",
+    "    \"\"\"Calculate the cosine similarity between two text documents.\"\"\"\n",
+    "    vectorizer = TfidfVectorizer()\n",
+    "    vectors = vectorizer.fit_transform([document1, document2])\n",
+    "    cosine_similarity_score = sklearn_cosine_similarity(vectors[0], vectors[1])\n",
+    "    return cosine_similarity_score.item()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Truncate text to a specified token limit\n",
+    "# def truncate_text(text: str, token_limit: int = 512) -> str:\n",
+    "#     \"\"\"Truncate text to a specified number of tokens.\"\"\"\n",
+    "#     if isinstance(text, str):\n",
+    "#         words = text.split()\n",
+    "#         return \" \".join(words[:token_limit])\n",
+    "#     return \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,13 +137,16 @@
     "    average_embedding2 = np.mean(embeddings2, axis=0)\n",
     "    \n",
     "    # Calculate cosine similarity between the averaged embeddings\n",
-    "    cosine_similarity_score = cosine_similarity(average_embedding1.reshape(1, -1), average_embedding2.reshape(1, -1))\n",
+    "    cosine_similarity_score = sklearn_cosine_similarity(\n",
+    "        average_embedding1.reshape(1, -1), \n",
+    "        average_embedding2.reshape(1, -1)\n",
+    "    )\n",
     "    return cosine_similarity_score.item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,12 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Process each row of the dataframe\n",
-    "def process_resume_row(row):\n",
+    "def process_resume_row(row, threshold=0.3):\n",
     "    if pd.isna(row['new_resume']):\n",
     "        return pd.Series([0.0, 0.0, 0.0, 0.0, 0.0])  # Assign 0 similarity for empty new_resume\n",
     "    try:\n",
@@ -232,12 +256,33 @@
     "        full_new_resume_normalized = normalize_text(full_new_resume_text)\n",
     "        full_job_normalized = normalize_text(full_job_text)\n",
     "\n",
-    "        # Calculate cosine similarities\n",
-    "        work_ex_score = cosine_similarity_openai(work_ex_resume_normalized, work_ex_new_resume_normalized)\n",
-    "        projects_score = cosine_similarity_openai(projects_resume_normalized, projects_new_resume_normalized)\n",
-    "        full_resume_score = cosine_similarity_openai(full_resume_normalized, full_new_resume_normalized)\n",
-    "        resume_job_score = cosine_similarity_openai(full_resume_normalized, full_job_normalized)\n",
-    "        new_resume_job_score = cosine_similarity_openai(full_new_resume_normalized, full_job_normalized)\n",
+    "        # Convert normalized lists back to strings\n",
+    "        work_ex_resume_normalized = \" \".join(work_ex_resume_normalized)\n",
+    "        projects_resume_normalized = \" \".join(projects_resume_normalized)\n",
+    "        work_ex_new_resume_normalized = \" \".join(work_ex_new_resume_normalized)\n",
+    "        projects_new_resume_normalized = \" \".join(projects_new_resume_normalized)\n",
+    "        full_resume_normalized = \" \".join(full_resume_normalized)\n",
+    "        full_new_resume_normalized = \" \".join(full_new_resume_normalized)\n",
+    "        full_job_normalized = \" \".join(full_job_normalized)\n",
+    "\n",
+    "        # Ensure non-empty normalized text for TF-IDF similarity calculation\n",
+    "        if not work_ex_resume_normalized.strip() or not work_ex_new_resume_normalized.strip():\n",
+    "            return pd.Series([0.0, 0.0, 0.0, 0.0, 0.0])\n",
+    "        if not projects_resume_normalized.strip() or not projects_new_resume_normalized.strip():\n",
+    "            return pd.Series([0.0, 0.0, 0.0, 0.0, 0.0])\n",
+    "\n",
+    "        # Calculate cosine similarities for text\n",
+    "        work_ex_score = cosine_similarity_text(work_ex_resume_normalized, work_ex_new_resume_normalized)\n",
+    "        projects_score = cosine_similarity_text(projects_resume_normalized, projects_new_resume_normalized)\n",
+    "        full_resume_score = cosine_similarity_text(full_resume_normalized, full_new_resume_normalized)\n",
+    "\n",
+    "        # Apply threshold and calculate OpenAI-based cosine similarities for job match\n",
+    "        if work_ex_score < threshold or projects_score < threshold:\n",
+    "            resume_job_score = 0.0\n",
+    "            new_resume_job_score = 0.0\n",
+    "        else:\n",
+    "            resume_job_score = cosine_similarity_openai(full_resume_normalized, full_job_normalized)\n",
+    "            new_resume_job_score = cosine_similarity_openai(full_new_resume_normalized, full_job_normalized)\n",
     "\n",
     "        # Round similarity scores to 2 decimal places\n",
     "        return pd.Series([\n",
@@ -250,19 +295,19 @@
     "\n",
     "    except json.JSONDecodeError:\n",
     "        # Handle JSON decoding errors\n",
-    "        return pd.Series([0.0, 0.0, 0.0, 0.0, 0.0])"
+    "        return pd.Series([0.0, 0.0, 0.0, 0.0, 0.0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Improvement Percentage: 1.65%\n"
+      "Average Improvement Percentage: 0.54%\n"
      ]
     }
    ],
@@ -288,14 +333,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Improvement Percentage: 2.22%\n"
+      "Average Improvement Percentage: 2.23%\n"
      ]
     }
    ],
@@ -304,7 +349,7 @@
     "df_gpt = pd.read_csv('new_resumes_gpt.csv')  # Assuming you load your DataFrame from a CSV file\n",
     "\n",
     "# Apply the function to each row\n",
-    "df_gpt[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity', 'resume_job_similarity', 'new_resume_job_similarity']] = df_gpt.apply(process_resume_row, axis=1)\n",
+    "df_gpt[['work_ex_similarity', 'projects_similarity', 'full_resume_similarity', 'resume_job_similarity', 'new_resume_job_similarity']] = df_gpt.apply(process_resume_row, axis=1, threshold=0.0)\n",
     "\n",
     "# Calculate improvement percentage, handle division by zero and negative values\n",
     "df_gpt['improvement_percentage'] = df_gpt.apply(\n",
